# docs/swagger.json
@@ -1370,24 +1370,6 @@
                 }
             }
         },
-        "/api/v1/redenvelope/enabled": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "redenvelope"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/util.ResponseAny"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/redenvelope/list": {
             "post": {
                 "consumes": [
@@ -1420,7 +1402,7 @@
                 }
             }
         },
-        "/api/v1/redenvelope/{code}": {
+        "/api/v1/redenvelope/{id}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -1431,8 +1413,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "红包码",
-                        "name": "code",
+                        "description": "红包ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -1789,7 +1771,9 @@
                         "community",
                         "online",
                         "test",
-                        "redenvelope"
+                        "red_envelope_send",
+                        "red_envelope_receive",
+                        "red_envelope_refund"
                     ]
                 }
             }
@@ -1955,10 +1939,10 @@
         "redenvelope.ClaimRequest": {
             "type": "object",
             "required": [
-                "code"
+                "id"
             ],
             "properties": {
-                "code": {
+                "id": {
                     "type": "string"
                 }
             }
